- new option: genocat --component <component-number> - to view a single component of a bound file (including one of the fastq files in a paired file)
- new option: genocat --lines [start]-[last] - show a subset of lines of the file.
- new option: genocat --head [num_lines] - show lines from the start of the file.
- new option: genocat --tail [num_lines] - show lines from the end of the file.
- new option: genocat --count - displays the number of lines (or reads in the case of FASTQ), that
- new option: genocat --FLAG - filters a SAM or BAM file by the value of the FLAG field
- new option: genocat --MAPQ - filters a SAM or BAM file by the value of the MAPQ field
  survived any filters applied (--regions, --grep, --taxid, --FLAGS, --MAPQ, --component, --one-vb etc)
- new option: --echo displays the command line and a timestamp upon completion of execution (successful or failed)
- discontinued support for GTShark codec - use genozip v11 to decompress old VCF files compressed with --gtshark

Option changes:
- genounzip now always unbinds files, and the --unbind is canceled. the --prefix can now used to set a prefix.
- genocat --fastq will NOT add /1 or /2 to R1 and R2 reads in the case that --FLAG is specified as well
- genocat --grep now works with most data types
- genocat --validate=valid displays filenames that are valid genozip files. No change when used without "=valid".
- genols --unbind (-u) option is renamed --list (-l). genozip --list option is canceled.
- --sex, --coverage, --stats and --STATS replace --show-sex, --show-coverage --show-stats, --SHOW-STATS resptively
- --chroms, and --contigs are accepted as alternative names for --list-chroms

New developer options:
- new option: genozip --show-chain-contigs - used in combination with --chain
- new option: genozip --show-kraken - used in combination with --taxid
- new option: --show-uncompress. Shows uncompressing of section data.
- new option: --show-flags. Shows internal flags after initialization.
